// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`destination final casts from a showdown half, notes an underdog pick and states the tie rule 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#17142a",
          "flex": 1,
        }
      }
      testID="showdown"
    >
      <View
        style={
          [
            {
              "left": 0,
              "paddingHorizontal": 20,
              "position": "absolute",
              "right": 0,
              "zIndex": 3,
            },
            {
              "top": 55,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
                "flexWrap": "nowrap",
              },
              {
                "alignItems": "center",
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityActions={
              [
                {
                  "label": "NEXT TRIP · FINAL",
                  "name": "activate",
                },
              ]
            }
            accessibilityLabel="NEXT TRIP · FINAL"
            accessibilityRole="button"
            accessibilityState={
              {
                "disabled": false,
                "selected": false,
              }
            }
            accessible={true}
            collapsable={false}
            onAccessibilityAction={[Function]}
            style={
              [
                {
                  "minHeight": 44,
                  "minWidth": 44,
                },
                {
                  "alignItems": "flex-start",
                  "justifyContent": "center",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
            testID="showdown-back"
          >
            <View
              style={
                [
                  {
                    "borderRadius": 16,
                    "justifyContent": "center",
                    "minHeight": 32,
                    "paddingHorizontal": 14,
                  },
                  {
                    "backgroundColor": "#2c2750",
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#f4efe4",
                      "fontFamily": "Archivo-W100-800",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "letterSpacing": 0.84,
                      "lineHeight": 12.04,
                    },
                    undefined,
                    {
                      "marginTop": -5.725999999999999,
                      "paddingTop": 5.725999999999999,
                    },
                  ]
                }
              >
                NEXT TRIP · FINAL
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "column",
            },
            {},
            {
              "flex": 1,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Kyoto, 1 votes"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "flex": 1,
            }
          }
          testID="showdown-half-0"
        >
          <View
            style={
              [
                {
                  "flex": 1,
                  "gap": 10,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "padding": 20,
                },
                {
                  "alignItems": "flex-start",
                  "backgroundColor": "#ffd84a",
                  "transformOrigin": "bottom",
                },
                null,
                {
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                    {
                      "scaleY": 1,
                    },
                  ],
                },
              ]
            }
          >
            <View
              pointerEvents="none"
              style={
                [
                  {
                    "opacity": 0.35,
                    "position": "absolute",
                  },
                  {
                    "right": -16,
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Tokek"
                style={
                  {
                    "height": 180,
                    "width": 180,
                  }
                }
              />
            </View>
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              onTextLayout={[Function]}
              style={
                [
                  {
                    "color": "#17142a",
                    "fontFamily": "Archivo-W62-900",
                    "fontSize": 176,
                    "fontStyle": "normal",
                    "fontVariant": [
                      "tabular-nums",
                    ],
                    "letterSpacing": -3.52,
                    "lineHeight": 151.35999999999999,
                  },
                  undefined,
                  {
                    "marginTop": -71.98399999999998,
                    "paddingTop": 71.98399999999998,
                  },
                ]
              }
            >
              KYOTO
            </Text>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "flexWrap": "nowrap",
                  },
                  {
                    "alignItems": "center",
                    "gap": 8,
                  },
                  undefined,
                ]
              }
            >
              <View
                accessibilityLabel="Maya"
                accessible={true}
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={null}
                >
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                    style={
                      [
                        {
                          "borderRadius": 26,
                          "padding": 0,
                        },
                        null,
                        null,
                      ]
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "justifyContent": "center",
                            "overflow": "hidden",
                          },
                          {
                            "backgroundColor": "#ff5fa8",
                            "borderColor": "#17142a",
                            "borderRadius": 26,
                            "borderWidth": 2,
                            "height": 30,
                            "opacity": 1,
                            "width": 30,
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        onLayout={[Function]}
                        onTextLayout={[Function]}
                        style={
                          [
                            {
                              "color": "#17142a",
                              "fontFamily": "Geist-800",
                              "fontSize": 11,
                              "fontStyle": "normal",
                              "letterSpacing": 0.88,
                              "lineHeight": 15.399999999999999,
                            },
                            undefined,
                            {
                              "marginTop": -0.2970000000000015,
                              "paddingTop": 0.2970000000000015,
                            },
                          ]
                        }
                      >
                        M
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <Text
                allowFontScaling={false}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#17142a",
                      "fontFamily": "Archivo-W78-900",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "letterSpacing": 0.32,
                      "lineHeight": 13.76,
                    },
                    undefined,
                    {
                      "marginTop": -6.543999999999999,
                      "paddingTop": 6.543999999999999,
                    },
                  ]
                }
              >
                1 VOTES
              </Text>
            </View>
          </View>
        </View>
        <View
          importantForAccessibility="no-hide-descendants"
          style={
            {
              "alignItems": "center",
              "height": 0,
              "justifyContent": "center",
              "zIndex": 2,
            }
          }
        >
          <View
            style={
              {
                "transform": [
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#17142a",
                    "borderColor": "#f4efe4",
                    "borderRadius": 33,
                    "borderWidth": 5,
                    "height": 66,
                    "justifyContent": "center",
                    "width": 66,
                  },
                  {},
                ]
              }
            >
              <Text
                allowFontScaling={false}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#ffd84a",
                      "fontFamily": "Archivo-W78-900",
                      "fontSize": 28,
                      "fontStyle": "normal",
                      "letterSpacing": 0.56,
                      "lineHeight": 24.08,
                    },
                    undefined,
                    {
                      "marginTop": -11.451999999999998,
                      "paddingTop": 11.451999999999998,
                    },
                  ]
                }
              >
                VS
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Lisbon, 0 votes"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "flex": 1,
            }
          }
          testID="showdown-half-1"
        >
          <View
            style={
              [
                {
                  "flex": 1,
                  "gap": 10,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "padding": 20,
                },
                {
                  "alignItems": "flex-end",
                  "backgroundColor": "#ffd84a",
                  "transformOrigin": "top",
                },
                null,
                {
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                    {
                      "scaleY": 1,
                    },
                  ],
                },
              ]
            }
          >
            <View
              pointerEvents="none"
              style={
                [
                  {
                    "opacity": 0.35,
                    "position": "absolute",
                  },
                  {
                    "left": -16,
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Tokek"
                style={
                  {
                    "height": 180,
                    "width": 180,
                  }
                }
              />
            </View>
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              onTextLayout={[Function]}
              style={
                [
                  {
                    "color": "#17142a",
                    "fontFamily": "Archivo-W62-900",
                    "fontSize": 176,
                    "fontStyle": "normal",
                    "fontVariant": [
                      "tabular-nums",
                    ],
                    "letterSpacing": -3.52,
                    "lineHeight": 151.35999999999999,
                  },
                  undefined,
                  {
                    "marginTop": -71.98399999999998,
                    "paddingTop": 71.98399999999998,
                  },
                ]
              }
            >
              LISBON
            </Text>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "flexWrap": "nowrap",
                  },
                  {
                    "alignItems": "center",
                    "gap": 8,
                  },
                  undefined,
                ]
              }
            >
              <Text
                allowFontScaling={false}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#17142a",
                      "fontFamily": "Archivo-W78-900",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "letterSpacing": 0.32,
                      "lineHeight": 13.76,
                    },
                    undefined,
                    {
                      "marginTop": -6.543999999999999,
                      "paddingTop": 6.543999999999999,
                    },
                  ]
                }
              >
                0 VOTES
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#17142a",
              "borderRadius": 20,
              "gap": 4,
              "left": 16,
              "padding": 14,
              "position": "absolute",
              "right": 16,
            },
            {
              "bottom": 42,
            },
          ]
        }
        testID="showdown-footer"
      >
        <Text
          allowFontScaling={false}
          onLayout={[Function]}
          onTextLayout={[Function]}
          style={
            [
              {
                "color": "#ffd84a",
                "fontFamily": "Geist-800",
                "fontSize": 11,
                "fontStyle": "normal",
                "letterSpacing": 0.88,
                "lineHeight": 15.399999999999999,
              },
              undefined,
              {
                "marginTop": -0.2970000000000015,
                "paddingTop": 0.2970000000000015,
              },
            ]
          }
        >
          1 VOTES · JORDAN AND WINSTON TO GO
        </Text>
        <Text
          allowFontScaling={false}
          onLayout={[Function]}
          onTextLayout={[Function]}
          style={
            [
              {
                "color": "#f4efe4",
                "fontFamily": "Geist-500",
                "fontSize": 12.5,
                "fontStyle": "normal",
                "letterSpacing": 0,
                "lineHeight": 16.875,
              },
              undefined,
              {
                "marginTop": -0.6500000000000006,
                "paddingTop": 0.6500000000000006,
              },
            ]
          }
          testID="showdown-hint"
        >
          You haven't voted yet. Tap a side.
        </Text>
        <Text
          allowFontScaling={false}
          onLayout={[Function]}
          onTextLayout={[Function]}
          style={
            [
              {
                "color": "#f4efe4",
                "fontFamily": "Geist-500",
                "fontSize": 12.5,
                "fontStyle": "normal",
                "letterSpacing": 0,
                "lineHeight": 16.875,
              },
              undefined,
              {
                "marginTop": -0.6500000000000006,
                "paddingTop": 0.6500000000000006,
              },
            ]
          }
          testID="showdown-tie"
        >
          A tie goes to Kyoto: it's $440 cheaper for the 2 flying from Singapore.
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`destination final draws the split card with who is to go and the tie line, and opens the showdown 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "column",
          },
          {
            "gap": 12,
          },
          undefined,
        ]
      }
      testID="final-split"
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "flexWrap": "nowrap",
            },
            {
              "alignItems": "center",
              "gap": 8,
              "justifyContent": "space-between",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="header"
          allowFontScaling={false}
          numberOfLines={3}
          onLayout={[Function]}
          onTextLayout={[Function]}
          style={
            [
              {
                "color": "#f4efe4",
                "fontFamily": "Archivo-W70-900",
                "fontSize": 36,
                "fontStyle": "normal",
                "letterSpacing": 0,
                "lineHeight": 30.96,
              },
              undefined,
              {
                "marginTop": -14.723999999999997,
                "paddingTop": 14.723999999999997,
              },
            ]
          }
        >
          WHERE NEXT?
        </Text>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "flexWrap": "nowrap",
              },
              {
                "alignItems": "center",
                "gap": 6,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#ff5fa8",
                  "borderRadius": 4,
                  "height": 8,
                  "width": 8,
                },
                {},
              ]
            }
          />
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            onLayout={[Function]}
            onTextLayout={[Function]}
            style={
              [
                {
                  "color": "#ff5fa8",
                  "fontFamily": "Geist-800",
                  "fontSize": 11,
                  "fontStyle": "normal",
                  "letterSpacing": 0.88,
                  "lineHeight": 15.399999999999999,
                },
                undefined,
                {
                  "marginTop": -0.2970000000000015,
                  "paddingTop": 0.2970000000000015,
                },
              ]
            }
          >
            FINAL
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "opacity": 1,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          accessibilityLabel="Final: Kyoto or Lisbon"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="final-split-open"
        >
          <View
            style={
              {
                "borderRadius": 22,
                "flexDirection": "row",
                "height": 262,
                "overflow": "hidden",
              }
            }
          >
            <View
              style={
                [
                  {
                    "justifyContent": "space-between",
                    "padding": 16,
                  },
                  {
                    "alignItems": "flex-start",
                    "backgroundColor": "#ffd84a",
                    "width": "62%",
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                numberOfLines={1}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#17142a",
                      "fontFamily": "Archivo-W70-900",
                      "fontSize": 44,
                      "fontStyle": "normal",
                      "letterSpacing": -0.44,
                      "lineHeight": 37.839999999999996,
                    },
                    undefined,
                    {
                      "marginTop": -17.995999999999995,
                      "paddingTop": 17.995999999999995,
                    },
                  ]
                }
              >
                KYOTO
              </Text>
              <View
                style={{}}
              >
                <View
                  accessibilityLabel="Tokek"
                  style={
                    {
                      "height": 96,
                      "width": 96,
                    }
                  }
                />
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                    },
                    {
                      "alignItems": "center",
                      "gap": 6,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  accessibilityLabel="Maya"
                  accessible={true}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={null}
                  >
                    <View
                      accessibilityElementsHidden={true}
                      importantForAccessibility="no-hide-descendants"
                      style={
                        [
                          {
                            "borderRadius": 18,
                            "padding": 0,
                          },
                          null,
                          null,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "justifyContent": "center",
                              "overflow": "hidden",
                            },
                            {
                              "backgroundColor": "#ff5fa8",
                              "borderColor": "#17142a",
                              "borderRadius": 18,
                              "borderWidth": 2,
                              "height": 22,
                              "opacity": 1,
                              "width": 22,
                            },
                          ]
                        }
                      >
                        <Text
                          allowFontScaling={false}
                          onLayout={[Function]}
                          onTextLayout={[Function]}
                          style={
                            [
                              {
                                "color": "#17142a",
                                "fontFamily": "Geist-800",
                                "fontSize": 11,
                                "fontStyle": "normal",
                                "letterSpacing": 0.88,
                                "lineHeight": 15.399999999999999,
                              },
                              undefined,
                              {
                                "marginTop": -0.2970000000000015,
                                "paddingTop": 0.2970000000000015,
                              },
                            ]
                          }
                        >
                          M
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#17142a",
                        "fontFamily": "Archivo-W78-900",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "letterSpacing": 0.32,
                        "lineHeight": 13.76,
                      },
                      undefined,
                      {
                        "marginTop": -6.543999999999999,
                        "paddingTop": 6.543999999999999,
                      },
                    ]
                  }
                >
                  1
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "justifyContent": "space-between",
                    "padding": 16,
                  },
                  {
                    "alignItems": "flex-end",
                    "backgroundColor": "#ffd84a",
                    "width": "38%",
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                numberOfLines={1}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#17142a",
                      "fontFamily": "Archivo-W70-900",
                      "fontSize": 44,
                      "fontStyle": "normal",
                      "letterSpacing": -0.44,
                      "lineHeight": 37.839999999999996,
                    },
                    undefined,
                    {
                      "marginTop": -17.995999999999995,
                      "paddingTop": 17.995999999999995,
                    },
                  ]
                }
              >
                LISBON
              </Text>
              <View
                style={{}}
              >
                <View
                  accessibilityLabel="Tokek"
                  style={
                    {
                      "height": 96,
                      "width": 96,
                    }
                  }
                />
              </View>
              <View
                style={
                  [
                    {
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                    },
                    {
                      "alignItems": "center",
                      "gap": 6,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#17142a",
                        "fontFamily": "Archivo-W78-900",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "letterSpacing": 0.32,
                        "lineHeight": 13.76,
                      },
                      undefined,
                      {
                        "marginTop": -6.543999999999999,
                        "paddingTop": 6.543999999999999,
                      },
                    ]
                  }
                >
                  0
                </Text>
              </View>
            </View>
            <View
              pointerEvents="none"
              style={
                [
                  {
                    "bottom": -131,
                    "position": "absolute",
                    "top": -131,
                    "width": 262,
                  },
                  {
                    "left": "56%",
                    "transform": [
                      {
                        "rotate": "12deg",
                      },
                    ],
                  },
                  {
                    "backgroundColor": "#ffd84a",
                    "zIndex": -1,
                  },
                ]
              }
            />
            <View
              pointerEvents="none"
              style={
                {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "#17142a",
                      "borderColor": "#f4efe4",
                      "borderRadius": 33,
                      "borderWidth": 5,
                      "height": 66,
                      "justifyContent": "center",
                      "width": 66,
                    },
                    {},
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#ffd84a",
                        "fontFamily": "Archivo-W78-900",
                        "fontSize": 28,
                        "fontStyle": "normal",
                        "letterSpacing": 0.56,
                        "lineHeight": 24.08,
                      },
                      undefined,
                      {
                        "marginTop": -11.451999999999998,
                        "paddingTop": 11.451999999999998,
                      },
                    ]
                  }
                >
                  VS
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#1f1b38",
            "borderRadius": 20,
            "gap": 8,
            "padding": 12,
          }
        }
        testID="final-strip"
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
                "flexWrap": "nowrap",
              },
              {
                "alignItems": "center",
                "gap": 4,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 5,
                  "flex": 1,
                  "height": 10,
                },
                {
                  "backgroundColor": "#ffd84a",
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 5,
                  "flex": 1,
                  "height": 10,
                },
                {
                  "borderColor": "#a9a3c0",
                  "borderStyle": "dashed",
                  "borderWidth": 1,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "borderRadius": 5,
                  "flex": 1,
                  "height": 10,
                },
                {
                  "borderColor": "#a9a3c0",
                  "borderStyle": "dashed",
                  "borderWidth": 1,
                },
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "flexWrap": "nowrap",
              },
              {
                "alignItems": "center",
                "gap": 8,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "flexDirection": "column",
                },
                {
                  "gap": 2,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              onTextLayout={[Function]}
              style={
                [
                  {
                    "color": "#ffd84a",
                    "fontFamily": "Geist-800",
                    "fontSize": 11,
                    "fontStyle": "normal",
                    "letterSpacing": 0.88,
                    "lineHeight": 15.399999999999999,
                  },
                  undefined,
                  {
                    "marginTop": -0.2970000000000015,
                    "paddingTop": 0.2970000000000015,
                  },
                ]
              }
            >
              JORDAN AND WINSTON TO GO
            </Text>
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              onTextLayout={[Function]}
              style={
                [
                  {
                    "color": "#f4efe4",
                    "fontFamily": "Geist-500",
                    "fontSize": 12.5,
                    "fontStyle": "normal",
                    "letterSpacing": 0,
                    "lineHeight": 16.875,
                  },
                  undefined,
                  {
                    "marginTop": -0.6500000000000006,
                    "paddingTop": 0.6500000000000006,
                  },
                ]
              }
              testID="final-lines"
            >
              You haven't voted yet. A tie goes to Kyoto.
            </Text>
          </View>
          <View
            accessibilityLabel="Jordan, Winston Tan"
            accessible={true}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={null}
            >
              <View
                accessibilityElementsHidden={true}
                importantForAccessibility="no-hide-descendants"
                style={
                  [
                    {
                      "borderRadius": 18,
                      "padding": 0,
                    },
                    null,
                    {},
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "overflow": "hidden",
                      },
                      {
                        "backgroundColor": "#4f86ff",
                        "borderColor": "#17142a",
                        "borderRadius": 18,
                        "borderWidth": 2,
                        "height": 22,
                        "opacity": 0.7,
                        "width": 22,
                      },
                    ]
                  }
                >
                  <Text
                    allowFontScaling={false}
                    onLayout={[Function]}
                    onTextLayout={[Function]}
                    style={
                      [
                        {
                          "color": "#17142a",
                          "fontFamily": "Geist-800",
                          "fontSize": 11,
                          "fontStyle": "normal",
                          "letterSpacing": 0.88,
                          "lineHeight": 15.399999999999999,
                        },
                        undefined,
                        {
                          "marginTop": -0.2970000000000015,
                          "paddingTop": 0.2970000000000015,
                        },
                      ]
                    }
                  >
                    J
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                {
                  "marginStart": -7,
                }
              }
            >
              <View
                accessibilityElementsHidden={true}
                importantForAccessibility="no-hide-descendants"
                style={
                  [
                    {
                      "borderRadius": 18,
                      "padding": 0,
                    },
                    null,
                    {},
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "overflow": "hidden",
                      },
                      {
                        "backgroundColor": "#ffd84a",
                        "borderColor": "#17142a",
                        "borderRadius": 18,
                        "borderWidth": 2,
                        "height": 22,
                        "opacity": 0.7,
                        "width": 22,
                      },
                    ]
                  }
                >
                  <Text
                    allowFontScaling={false}
                    onLayout={[Function]}
                    onTextLayout={[Function]}
                    style={
                      [
                        {
                          "color": "#17142a",
                          "fontFamily": "Geist-800",
                          "fontSize": 11,
                          "fontStyle": "normal",
                          "letterSpacing": 0.88,
                          "lineHeight": 15.399999999999999,
                        },
                        undefined,
                        {
                          "marginTop": -0.2970000000000015,
                          "paddingTop": 0.2970000000000015,
                        },
                      ]
                    }
                  >
                    W
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
